syntax = "proto3";

option go_package=".;proto";
package proto;

service StreamService {
    rpc ServerSideStream(StreamRequest) returns (stream StreamResponse) {};

    rpc ClientSideStream(stream StreamRequest) returns (StreamResponse) {};

    rpc BidStream(stream StreamRequest) returns (stream StreamResponse) {};
}


message StreamPoint {
  string name = 1;
  int32 value = 2;
}

message StreamRequest {
  StreamPoint pt = 1;
}

message StreamResponse {
  StreamPoint pt = 1;
}